[package]
name = "worldviewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.12.1"
crossbeam-channel = "0.5.6"
stateloop = "0.7.0"
vulkano = "0.30.0"
vulkano-shaders = "0.30.0"
vulkano-win = "0.30.0"
worldgen = "0.5.3"
